# MGK

./: .gitignore  CMakeLists.txt
MGK2/: CMakeLists.txt  HComplex.cpp  HComplex.h  HCube.cpp  HCube.h  HLine.cpp  HLine.h  HMatrix3.cpp  HMatrix3.h  HMatrix4.cpp  HMatrix4.h  HPlane.cpp  HPlane.h  HQuat.cpp  HQuat.h  HRTX.cpp  HRTX.h  HSegment.cpp  HSegment.h  HSphere.cpp  HSphere.h  HUtils.cpp  HUtils.h  HVector.cpp  HVector.h  HVector4.cpp  HVector4.h  main.cpp
zad2/MGK2/MGK2/: CMakeLists.txt  HVector.cpp  HVector.h  MGK2.cpp  MGK2.h  main.cpp
